--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "juridico-app",
+    "name": "jusbr",
     "version": "2.0.0",
     "description": "Aplicação para gerenciamento de processos jurídicos",
     "functions": {
